force-app/main/default/objects/Chatbot_Message__c/Chatbot_Message__c.object-meta.xml
<CustomObject>
    <label>Chatbot Message</label>
    <nameField>
        <label>Chatbot_Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatbot Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>