force-app/main/default/objects/Chatbot_Message__c/fields/D_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>D_Member_ID__c</fullName>
    <label>D_Member_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>