force-app/main/default/objects/Chatbot_Message__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <label>Message_ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>