force-app/main/default/objects/Chatbot_Message__c/fields/Recieve__c.field-meta.xml
<CustomField>
    <fullName>Recieve__c</fullName>
    <label>Recieve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>