force-app/main/default/objects/Chatbot_Message__c/fields/Send__c.field-meta.xml
<CustomField>
    <fullName>Send__c</fullName>
    <label>Send</label>
    <length>255</length>
    <type>Text</type>
</CustomField>