force-app/main/default/objects/Chatbot_Message__c/fields/Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Sender_ID__c</fullName>
    <label>Sender_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>