force-app/main/default/objects/Chatbot_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>D_Member_ID__c</columns>
    <columns>Device_ID__c</columns>
    <columns>Message_ID__c</columns>
    <columns>Message_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Recieve__c</columns>
    <columns>Send__c</columns>
    <columns>Sender_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>